# shisen_opencv

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-and-test.yml  build-debian-nightly.yml  build-debian-stable.yml  ros2-ci.yml  ros_2_ci.yml
include/shisen/: camera.hpp  compressed_viewer.hpp  viewer.hpp
include/shisen_opencv/: camera.hpp  consumer.hpp  provider.hpp  shisen_opencv.hpp  utility.hpp  viewer.hpp
include/shisen_opencv/consumer/: camera_consumer.hpp  combined_mat_consumer.hpp  mat_consumer.hpp  member_mat_consumer.hpp
include/shisen_opencv/node/: camera.hpp  camera_capture.hpp  viewer.hpp
include/shisen_opencv/provider/: camera_config.hpp  camera_provider.hpp  combined_mat_provider.hpp  mat_provider.hpp
include/shisen_opencv/utility/: mat_image.hpp  options.hpp
shisen/: CMakeLists.txt  package.xml
shisen/include/shisen/: camera.hpp  compressed_viewer.hpp  image_viewer.hpp  raw_viewer.hpp  video_capturer.hpp  viewer.hpp
shisen/src/: camera_main.cpp  compressed_viewer_main.cpp  image_viewer_main.cpp  raw_viewer_main.cpp  video_capturer_main.cpp
shisen/src/shisen/: camera.cpp  compressed_viewer.cpp  image_viewer.cpp  raw_viewer.cpp  video_capturer.cpp  viewer.cpp
shisen_interfaces/: CMakeLists.txt  package.xml
shisen_interfaces/msg/: PropertyEvent.msg  RawImage.msg
shisen_interfaces/srv/: GetProperties.srv  SetProperties.srv
src/: camera.cpp  camera_main.cpp  compressed_viewer_main.cpp  viewer.cpp  viewer_main.cpp
src/consumer/: camera_consumer.cpp  mat_consumer.cpp
src/node/: camera.cpp  camera_capture.cpp  viewer.cpp
src/provider/: camera_config.cpp  camera_provider.cpp  mat_provider.cpp
src/shisen/: camera.cpp  compressed_viewer.cpp  viewer.cpp
src/utility/: mat_image.cpp
test/: compile_test.cpp  mat_image_test.cpp
