<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shisen_opencv</name>
  <version>0.2.0</version>
  <description>OpenCV implementation of Shisen camera tools project</description>
  <maintainer email="alfi.maulana.f@gmail.com">Alfi Maulana</maintainer>
  <license>MIT License</license>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>keisan</depend>
  <depend>libopencv-dev</depend>
  <depend>rclcpp</depend>
  <depend>shisen_cpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
